--- a/templates/container-index.hbs
+++ b/templates/container-index.hbs
@@ -1,1 +1,1 @@
-export { default } from './{{pascalCase name}}Container.vue'
+export { default  as {{pascalCase name}} } from './{{pascalCase name}}.vue'
